Issue #3 New packaging priciple